# opengl-test

./: .gitmodules  CMakeLists.txt  README.org
data/glsl/: color.frag  color.vert  font.frag  font.vert  simple.frag  simple.vert
include/: camera.h  cube.h  cubecolor.h  entity.h  font.h  gamestate.h  input.h  object.h  shader.h  text.h  texture.h  window.h
include/state/: maingame.h
src/: camera.cpp  cube.cpp  cubecolor.cpp  entity.cpp  font.cpp  input.cpp  main.cpp  object.cpp  shader.cpp  text.cpp  texture.cpp  window.cpp
src/state/: maingame.cpp
